# YetAnotherRenderSandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  YetAnotherRenderSandbox.sln
CMake/: compile_flags.cmake
Dependencies/include/: fastgltf_types.hpp  spirv_reflect.c  spirv_reflect.h  wuffs.h
Dependencies/lib/: fastgltf.lib  fastgltf_d.lib  fastgltf_simdjson.lib  fastgltf_simdjson_d.lib  liblz4_static.lib  liblz4_static_d.lib  meshoptimizer.lib  meshoptimizer_d.lib  tinygltf.lib  tinyobjloader.lib
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  dllmain.cpp
Engine/Core/: AsyncData.cpp  AsyncData.hpp  Base64.cpp  Base64.hpp  ChunkData.cpp  ChunkData.hpp  ChunkTypeInfo.hpp  Colour.cpp  Colour.hpp  GLTFLoader.cpp  GLTFLoader.hpp  Hash.cpp  Hash.hpp  Image.cpp  Image.hpp  Logger.cpp  Logger.hpp  Macros.hpp  MeshOptimiser.cpp  MeshOptimiser.hpp  SceneManager.cpp  SceneManager.hpp  TangentCalculator.cpp  TangentCalculator.hpp  Utilities.cpp  Utilities.hpp  Utils.cpp  Utils.hpp  VertexData.cpp  VertexData.hpp
Engine/Core/Logging/: Logger.cpp  Logger.hpp
Engine/OS/: Files.cpp  Files.hpp  InputEnums.hpp  InputState.cpp  InputState.hpp  Window.cpp  Window.hpp
Engine/OS/Win32/: Win32Window.cpp  Win32Window.hpp  WindowProc.hpp
Engine/Rendering/: AntiAliasingMode.hpp  Camera.cpp  Camera.hpp  CullingMode.hpp  GBuffer.cpp  GBuffer.hpp  GLTFLoader.cpp  GLTFLoader.hpp  IDevice.hpp  IMaterialManager.hpp  IPhysicalDevice.hpp  IResourceFactory.hpp  ISwapChain.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  MeshInfo.hpp  MeshManager.cpp  MeshManager.hpp  NvidiaReflex.cpp  NvidiaReflex.hpp  PostProcessing.cpp  PostProcessing.hpp  QueueFamilyIndices.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderSettings.hpp  RenderStats.cpp  RenderStats.hpp  Renderer.cpp  Renderer.hpp  SceneManager.cpp  SceneManager.hpp  Shader.cpp  Shader.hpp  ShadowMap.cpp  ShadowMap.hpp  TangentCalculator.cpp  TangentCalculator.hpp  (+3 more)
Engine/Rendering/ComputePasses/: DepthReductionPass.cpp  DepthReductionPass.hpp  FrustumCullingPass.cpp  FrustumCullingPass.hpp  IComputePass.hpp  ShadowCullingPass.cpp  ShadowCullingPass.hpp
Engine/Rendering/Passes/: CombinePass.cpp  CombinePass.hpp  IRenderPass.hpp  SceneOpaquePass.cpp  SceneOpaquePass.hpp  SceneShadowPass.cpp  SceneShadowPass.hpp  TAAPass.cpp  TAAPass.hpp  TonemapperPass.cpp  TonemapperPass.hpp  UIPass.cpp  UIPass.hpp
Engine/Rendering/RenderPasses/: CombinePass.cpp  CombinePass.hpp  IRenderPass.hpp  SceneOpaquePass.cpp  SceneOpaquePass.hpp  SceneShadowPass.cpp  SceneShadowPass.hpp  TAAPass.cpp  TAAPass.hpp  TonemapperPass.cpp  TonemapperPass.hpp  UIPass.cpp  UIPass.hpp
Engine/Rendering/RenderPasses/PostProcessing/: FXAAPass.cpp  FXAAPass.hpp  SMAABlendPass.cpp  SMAABlendPass.hpp  SMAAEdgesPass.cpp  SMAAEdgesPass.hpp  SMAAWeightsPass.cpp  SMAAWeightsPass.hpp  TAAPass.cpp  TAAPass.hpp  TonemapperPass.cpp  TonemapperPass.hpp
Engine/Rendering/RenderResources/: GBuffer.cpp  GBuffer.hpp  IRenderNode.hpp  IRenderResource.hpp  RenderPassResourceInfo.hpp  ShadowMap.cpp  ShadowMap.hpp
Engine/Rendering/Resources/: AttachmentInfo.hpp  FrameInfoUniformBuffer.hpp  GeometryBatch.cpp  GeometryBatch.hpp  IBuffer.hpp  ICommandBuffer.hpp  ICommandPool.hpp  IGeometryBatch.hpp  IImageMemoryBarriers.hpp  IImageSampler.hpp  IImageView.hpp  IMaterialManager.hpp  IMemoryBarriers.hpp  IPhysicalDevice.hpp  IRenderImage.hpp  IResourceFactory.hpp  ISemaphore.hpp  ISwapChain.hpp  IndexedIndirectCommand.hpp  LightUniformBuffer.hpp  Material.cpp  Material.hpp  RenderMeshInfo.hpp  SubmitInfo.hpp
Engine/Rendering/Vulkan/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Debug.cpp  Debug.hpp  DescriptorPool.cpp  DescriptorPool.hpp  Device.cpp  Device.hpp  FrameInfoUniformBuffer.hpp  Framebuffer.cpp  Framebuffer.hpp  GBuffer.cpp  GBuffer.hpp  GeometryBatch.cpp  GeometryBatch.hpp  ImageSampler.cpp  ImageSampler.hpp  ImageView.cpp  ImageView.hpp  Instance.cpp  Instance.hpp  LightUniformBuffer.hpp  MeshPushConstants.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  PipelineLayout.cpp  PipelineLayout.hpp  PipelineManager.cpp  PipelineManager.hpp  PostProcessing.cpp  PostProcessing.hpp  QueueFamilyIndices.hpp  RenderImage.cpp  RenderImage.hpp  RenderMesh.cpp  RenderMesh.hpp  (+28 more)
Engine/UI/: Drawer.cpp  Drawer.hpp  NodeBuilder.cpp  NodeBuilder.hpp  NodeManager.cpp  NodeManager.hpp  ScrollingGraphBuffer.cpp  ScrollingGraphBuffer.hpp  UIManager.cpp  UIManager.hpp
Engine/UI/Vulkan/: VulkanUIManager.cpp  VulkanUIManager.hpp
Sandbox/: CMakeLists.txt  Options.hpp  Sandbox.vcxproj  Sandbox.vcxproj.filters  UI.cpp  UI.hpp  main.cpp
Sandbox/Materials/: Combine.material  DepthReduction.material  FXAA.material  FrustumCulling.material  PBR.material  SMAABlend.material  SMAAEdges.material  SMAAWeights.material  Shadow.material  ShadowCulling.material  TAA.material  Tonemapper.material
Sandbox/Shaders/: Combine.frag  Combine.vert  Combine_frag.spv  Combine_vert.spv  DepthReduction.comp  DepthReduction_comp.spv  FXAA.frag  FXAA.glsl  FrustumCulling.comp  FrustumCulling_comp.spv  MeshInfo.glsl  PBR.frag  PBR.vert  PBR_frag.spv  PBR_vert.spv  SMAA.glsl  SMAA_blend.frag  SMAA_blend.vert  SMAA_edges.frag  SMAA_edges.vert  SMAA_weights.frag  SMAA_weights.vert  ScreenQuad_vert.spv  Shadow.frag  Shadow.vert  ShadowCulling.comp  Shadow_frag.spv  Shadow_vert.spv  TAA.frag  TAA.vert  TAA_frag.spv  TAA_vert.spv  Tonemapper.frag  Tonemapper_frag.spv  Triangle.frag  Triangle.vert  Triangle_frag.spv  Triangle_vert.spv  brdf.glsl  catmullsample.glsl  (+2 more)
