set(SOURCE_LIST
	"dllmain.cpp"
	"Core/Utilities.hpp"
	"Core/VertexData.cpp"
	"Core/VertexData.hpp"
	"Core/AsyncData.cpp"
	"Core/AsyncData.hpp"
	"Core/ChunkData.cpp"
	"Core/ChunkData.hpp"
	"Core/ChunkTypeInfo.hpp"
	"Core/Colour.cpp"
	"Core/Colour.hpp"
	"Core/GLTFLoader.cpp"
	"Core/GLTFLoader.hpp"
	"Core/Hash.cpp"
	"Core/Hash.hpp"
	"Core/Image.cpp"
	"Core/Image.hpp"
	"Core/Macros.hpp"
	"Core/MeshOptimiser.cpp"
	"Core/MeshOptimiser.hpp"
	"Core/SceneManager.cpp"
	"Core/SceneManager.hpp"
	"Core/TangentCalculator.cpp"
	"Core/TangentCalculator.hpp"
	"Core/Logging/Logger.cpp"
	"Core/Logging/Logger.hpp"
	"OS/Files.cpp"
	"OS/Files.hpp"
	"OS/InputEnums.hpp"
	"OS/InputState.cpp"
	"OS/InputState.hpp"
	"OS/Window.cpp"
	"OS/Window.hpp"
	"OS/Win32/Win32Window.cpp"
	"OS/Win32/Win32Window.hpp"
	"OS/Win32/WindowProc.hpp"
	"Rendering/RenderStats.cpp"
	"Rendering/RenderStats.hpp"
	"Rendering/Types.hpp"
	"Rendering/Camera.cpp"
	"Rendering/Camera.hpp"
	"Rendering/CullingMode.hpp"
	"Rendering/IDevice.hpp"
	"Rendering/IMaterialManager.hpp"
	"Rendering/IPhysicalDevice.hpp"
	"Rendering/IResourceFactory.hpp"
	"Rendering/ISwapChain.hpp"
	"Rendering/PostProcessing.cpp"
	"Rendering/PostProcessing.hpp"
	"Rendering/QueueFamilyIndices.hpp"
	"Rendering/Renderer.cpp"
	"Rendering/Renderer.hpp"
	"Rendering/RenderGraph.cpp"
	"Rendering/RenderGraph.hpp"
	"Rendering/RenderSettings.hpp"
	"Rendering/ComputePasses/FrustumCullingPass.cpp"
	"Rendering/ComputePasses/FrustumCullingPass.hpp"
	"Rendering/ComputePasses/ShadowCullingPass.cpp"
	"Rendering/ComputePasses/ShadowCullingPass.hpp"
	"Rendering/ComputePasses/IComputePass.hpp"
	"Rendering/ComputePasses/DepthReductionPass.cpp"
	"Rendering/ComputePasses/DepthReductionPass.hpp"
	"Rendering/RenderPasses/SceneShadowPass.cpp"
	"Rendering/RenderPasses/SceneShadowPass.hpp"
	"Rendering/RenderPasses/TAAPass.cpp"
	"Rendering/RenderPasses/TAAPass.hpp"
	"Rendering/RenderPasses/TonemapperPass.cpp"
	"Rendering/RenderPasses/TonemapperPass.hpp"
	"Rendering/RenderPasses/UIPass.cpp"
	"Rendering/RenderPasses/UIPass.hpp"
	"Rendering/RenderPasses/CombinePass.cpp"
	"Rendering/RenderPasses/CombinePass.hpp"
	"Rendering/RenderPasses/IRenderPass.hpp"
	"Rendering/RenderPasses/SceneOpaquePass.cpp"
	"Rendering/RenderPasses/SceneOpaquePass.hpp"
	"Rendering/RenderResources/ShadowMap.cpp"
	"Rendering/RenderResources/ShadowMap.hpp"
	"Rendering/RenderResources/IRenderNode.hpp"
	"Rendering/RenderResources/IRenderResource.hpp"
	"Rendering/Resources/ICommandPool.hpp"
	"Rendering/Resources/IImageSampler.hpp"
	"Rendering/Resources/IImageView.hpp"
	"Rendering/Resources/IndexedIndirectCommand.hpp"
	"Rendering/Resources/IRenderImage.hpp"
	"Rendering/Resources/ISemaphore.hpp"
	"Rendering/Resources/LightUniformBuffer.hpp"
	"Rendering/Resources/Material.cpp"
	"Rendering/Resources/Material.hpp"
	"Rendering/Resources/MeshInfo.hpp"
	"Rendering/Resources/RenderMeshInfo.hpp"
	"Rendering/Resources/SubmitInfo.hpp"
	"Rendering/Resources/AttachmentInfo.hpp"
	"Rendering/Resources/FrameInfoUniformBuffer.hpp"
	"Rendering/Resources/GeometryBatch.cpp"
	"Rendering/Resources/GeometryBatch.hpp"
	"Rendering/Resources/IBuffer.hpp"
	"Rendering/Resources/ICommandBuffer.hpp"
	"Rendering/Vulkan/VulkanRenderer.hpp"
	"Rendering/Vulkan/VulkanRenderStats.cpp"
	"Rendering/Vulkan/VulkanRenderStats.hpp"
	"Rendering/Vulkan/VulkanTypesInterop.hpp"
	"Rendering/Vulkan/Buffer.cpp"
	"Rendering/Vulkan/Buffer.hpp"
	"Rendering/Vulkan/CommandBuffer.cpp"
	"Rendering/Vulkan/CommandBuffer.hpp"
	"Rendering/Vulkan/CommandPool.cpp"
	"Rendering/Vulkan/CommandPool.hpp"
	"Rendering/Vulkan/Debug.cpp"
	"Rendering/Vulkan/Debug.hpp"
	"Rendering/Vulkan/DescriptorPool.cpp"
	"Rendering/Vulkan/DescriptorPool.hpp"
	"Rendering/Vulkan/Device.cpp"
	"Rendering/Vulkan/Device.hpp"
	"Rendering/Vulkan/ImageSampler.cpp"
	"Rendering/Vulkan/ImageSampler.hpp"
	"Rendering/Vulkan/ImageView.cpp"
	"Rendering/Vulkan/ImageView.hpp"
	"Rendering/Vulkan/Instance.cpp"
	"Rendering/Vulkan/Instance.hpp"
	"Rendering/Vulkan/PhysicalDevice.cpp"
	"Rendering/Vulkan/PhysicalDevice.hpp"
	"Rendering/Vulkan/PipelineLayout.cpp"
	"Rendering/Vulkan/PipelineLayout.hpp"
	"Rendering/Vulkan/PipelineManager.cpp"
	"Rendering/Vulkan/PipelineManager.hpp"
	"Rendering/Vulkan/RenderImage.cpp"
	"Rendering/Vulkan/RenderImage.hpp"
	"Rendering/Vulkan/ResourceFactory.cpp"
	"Rendering/Vulkan/ResourceFactory.hpp"
	"Rendering/Vulkan/Semaphore.cpp"
	"Rendering/Vulkan/Semaphore.hpp"
	"Rendering/Vulkan/Surface.cpp"
	"Rendering/Vulkan/Surface.hpp"
	"Rendering/Vulkan/SwapChain.cpp"
	"Rendering/Vulkan/SwapChain.hpp"
	"Rendering/Vulkan/SwapChainSupportDetails.hpp"
	"Rendering/Vulkan/VulkanRenderer.cpp"
	"UI/ScrollingGraphBuffer.hpp"
	"UI/UIManager.cpp"
	"UI/UIManager.hpp"
	"UI/Drawer.cpp"
	"UI/Drawer.hpp"
	"UI/NodeBuilder.cpp"
	"UI/NodeBuilder.hpp"
	"UI/NodeManager.cpp"
	"UI/NodeManager.hpp"
	"UI/ScrollingGraphBuffer.cpp"
	"UI/Vulkan/VulkanUIManager.hpp"
	"UI/Vulkan/VulkanUIManager.cpp")
	
add_library(Engine SHARED ${SOURCE_LIST})

target_include_directories(Engine PUBLIC
	${CMAKE_CURRENT_SOURCE_DIR}
	"../ThirdParty/imgui/"
	"../ThirdParty/imgui-node-editor/"
	"../ThirdParty/implot/"
	"../ThirdParty/fastgltf/include/"
	"../ThirdParty/SPIRV-Reflect/"
	"../ThirdParty/lz4/lib/"
	"../ThirdParty/meshoptimizer/src/"
	"../ThirdParty/stb/"
	"../ThirdParty/wuffs/"
	"../ThirdParty/simdjson/"
	"../ThirdParty/bc7enc_rdo/"
	"$ENV{VULKAN_SDK}/Include")
	
target_link_directories(Engine PUBLIC
	"$ENV{VULKAN_SDK}/Lib")

target_link_libraries(Engine PRIVATE
	bc7enc_rdo
	fastgltf
	lz4
	spirv_reflect
	meshoptimizer
	imgui
	imgui-node-editor
	implot
	"vulkan-1")

set_compile_flags(Engine)

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCE_LIST})

target_compile_options(Engine PRIVATE "/MP")

target_compile_definitions(Engine PRIVATE ENGINE_EXPORTS)
	
target_compile_definitions(Engine PUBLIC
    NOMINMAX
	VULKAN_HPP_DISPATCH_LOADER_DYNAMIC=1
	FASTGLTF_USE_CUSTOM_SMALLVECTOR=${FASTGLTF_USE_CUSTOM_SMALLVECTOR}
	VK_USE_PLATFORM_WIN32_KHR
	GLM_FORCE_RADIANS
	GLM_FORCE_DEPTH_ZERO_TO_ONE
	GLM_FORCE_LEFT_HANDED
	GLM_ENABLE_EXPERIMENTAL)